Squash a lot of bugs.

--- a/WebContent/files/account_page/styles.css
+++ b/WebContent/files/account_page/styles.css
@@ -345,7 +345,7 @@ body {
   left:21px;
   top:529px;
   width:293px;
-  height:28px;
+  height:20px;
   font-family:'Arial Negreta', 'Arial Normal', 'Arial';
   font-weight:700;
   font-style:normal;
@@ -478,7 +478,7 @@ body {
   left:0px;
   top:0px;
   width:96px;
-  height:44px;
+  height:20px;
   background:inherit;
   background-color:rgba(255, 255, 255, 0);
   border:none;
@@ -495,7 +495,7 @@ body {
   left:21px;
   top:566px;
   width:96px;
-  height:44px;
+  height:20px;
   font-family:'Arial Negreta', 'Arial Normal', 'Arial';
   font-weight:700;
   font-style:normal;
@@ -512,7 +512,7 @@ body {
   left:0px;
   top:0px;
   width:94px;
-  height:44px;
+  height:20px;
   background:inherit;
   background-color:rgba(255, 255, 255, 0);
   border:none;
@@ -529,7 +529,7 @@ body {
   left:332px;
   top:566px;
   width:94px;
-  height:44px;
+  height:20px;
   font-family:'Arial Negreta', 'Arial Normal', 'Arial';
   font-weight:700;
   font-style:normal;
@@ -546,7 +546,7 @@ body {
   left:0px;
   top:0px;
   width:127px;
-  height:44px;
+  height:20px;
   background:inherit;
   background-color:rgba(255, 255, 255, 0);
   border:none;
@@ -563,7 +563,7 @@ body {
   left:21px;
   top:614px;
   width:127px;
-  height:44px;
+  height:20px;
   font-family:'Arial Negreta', 'Arial Normal', 'Arial';
   font-weight:700;
   font-style:normal;
@@ -580,7 +580,7 @@ body {
   left:0px;
   top:0px;
   width:158px;
-  height:44px;
+  height:20px;
   background:inherit;
   background-color:rgba(255, 255, 255, 0);
   border:none;
@@ -597,7 +597,7 @@ body {
   left:21px;
   top:673px;
   width:158px;
-  height:44px;
+  height:20px;
   font-family:'Arial Negreta', 'Arial Normal', 'Arial';
   font-weight:700;
   font-style:normal;
@@ -1301,7 +1301,7 @@ body {
   left:0px;
   top:0px;
   width:230px;
-  height:44px;
+  height:20px;
   background:inherit;
   background-color:rgba(255, 255, 255, 0);
   border:none;
@@ -1318,7 +1318,7 @@ body {
   left:332px;
   top:1584px;
   width:230px;
-  height:44px;
+  height:20px;
   font-family:'Arial Negreta', 'Arial Normal', 'Arial';
   font-weight:700;
   font-style:normal;
@@ -1335,7 +1335,7 @@ body {
   left:0px;
   top:0px;
   width:90px;
-  height:44px;
+  height:20px;
   background:inherit;
   background-color:rgba(255, 255, 255, 0);
   border:none;
@@ -1352,7 +1352,7 @@ body {
   left:334px;
   top:1606px;
   width:90px;
-  height:44px;
+  height:20px;
   font-family:'Arial Negreta', 'Arial Normal', 'Arial';
   font-weight:700;
   font-style:normal;
@@ -1369,7 +1369,7 @@ body {
   left:0px;
   top:0px;
   width:92px;
-  height:44px;
+  height:20px;
   background:inherit;
   background-color:rgba(255, 255, 255, 0);
   border:none;
@@ -1386,7 +1386,7 @@ body {
   left:332px;
   top:1628px;
   width:92px;
-  height:44px;
+  height:20px;
   font-family:'Arial Negreta', 'Arial Normal', 'Arial';
   font-weight:700;
   font-style:normal;
@@ -1403,7 +1403,7 @@ body {
   left:0px;
   top:0px;
   width:103px;
-  height:44px;
+  height:20px;
   background:inherit;
   background-color:rgba(255, 255, 255, 0);
   border:none;
@@ -1420,7 +1420,7 @@ body {
   left:332px;
   top:1650px;
   width:103px;
-  height:44px;
+  height:20px;
   font-family:'Arial Negreta', 'Arial Normal', 'Arial';
   font-weight:700;
   font-style:normal;
@@ -1437,7 +1437,7 @@ body {
   left:0px;
   top:0px;
   width:38px;
-  height:44px;
+  height:20px;
   background:inherit;
   background-color:rgba(255, 255, 255, 0);
   border:none;
@@ -1454,7 +1454,7 @@ body {
   left:332px;
   top:1670px;
   width:38px;
-  height:44px;
+  height:20px;
   font-family:'Arial Negreta', 'Arial Normal', 'Arial';
   font-weight:700;
   font-style:normal;
@@ -1471,7 +1471,7 @@ body {
   left:0px;
   top:0px;
   width:174px;
-  height:44px;
+  height:20px;
   background:inherit;
   background-color:rgba(255, 255, 255, 0);
   border:none;
@@ -1488,7 +1488,7 @@ body {
   left:332px;
   top:1694px;
   width:174px;
-  height:44px;
+  height:20px;
   font-family:'Arial Negreta', 'Arial Normal', 'Arial';
   font-weight:700;
   font-style:normal;
@@ -1505,7 +1505,7 @@ body {
   left:0px;
   top:0px;
   width:147px;
-  height:44px;
+  height:20px;
   background:inherit;
   background-color:rgba(255, 255, 255, 0);
   border:none;
@@ -1522,7 +1522,7 @@ body {
   left:332px;
   top:1714px;
   width:147px;
-  height:44px;
+  height:20px;
   font-family:'Arial Negreta', 'Arial Normal', 'Arial';
   font-weight:700;
   font-style:normal;
@@ -1595,7 +1595,7 @@ body {
   left:0px;
   top:0px;
   width:211px;
-  height:44px;
+  height:20px;
   background:inherit;
   background-color:rgba(255, 255, 255, 0);
   border:none;
@@ -1612,7 +1612,7 @@ body {
   left:763px;
   top:1598px;
   width:211px;
-  height:44px;
+  height:20px;
   font-family:'Arial Negreta', 'Arial Normal', 'Arial';
   font-weight:700;
   font-style:normal;
@@ -1651,7 +1651,7 @@ body {
   left:0px;
   top:0px;
   width:195px;
-  height:44px;
+  height:20px;
   background:inherit;
   background-color:rgba(255, 255, 255, 0);
   border:none;
@@ -1668,7 +1668,7 @@ body {
   left:763px;
   top:1664px;
   width:195px;
-  height:44px;
+  height:20px;
   font-family:'Arial Negreta', 'Arial Normal', 'Arial';
   font-weight:700;
   font-style:normal;
@@ -2513,6 +2513,147 @@ body {
   top:144px;
   width:1px;
   height:1px;
+}
+
+
+#u184_div {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:99px;
+  height:25px;
+  background:inherit;
+  background-color:rgba(68, 68, 68, 1);
+  border:none;
+  border-radius:5px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+}
+#u184 {
+  position:absolute;
+  left:1227px;
+  top:10px;
+  width:99px;
+  height:25px;
+}
+#u185 {
+  position:absolute;
+  left:2px;
+  top:4px;
+  width:95px;
+  word-wrap:break-word;
+}
+#u186 {
+  position:absolute;
+  left:790px;
+  top:10px;
+  width:157px;
+  height:25px;
+}
+#u186_input {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:157px;
+  height:25px;
+  font-family:'Arial Normal', 'Arial';
+  font-weight:400;
+  font-style:normal;
+  font-size:13px;
+  text-decoration:none;
+  color:#000000;
+  text-align:left;
+}
+#u187 {
+  position:absolute;
+  left:1057px;
+  top:10px;
+  width:160px;
+  height:25px;
+}
+#u187_input {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:160px;
+  height:25px;
+  font-family:'Arial Normal', 'Arial';
+  font-weight:400;
+  font-style:normal;
+  font-size:13px;
+  text-decoration:none;
+  color:#000000;
+  text-align:left;
+}
+#u188 {
+  position:absolute;
+  left:884px;
+  top:56px;
+  width:310px;
+  height:25px;
+}
+#u188_input {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:310px;
+  height:25px;
+  font-family:'Arial Normal', 'Arial';
+  font-weight:400;
+  font-style:normal;
+  font-size:13px;
+  text-decoration:none;
+  color:#000000;
+  text-align:left;
+}
+#u44 {
+  position:absolute;
+  left:687px;
+  top:5px;
+  width:103px;
+  height:41px;
+  font-size:20px;
+  color:#FFFFFF;
+}
+#u45 {
+  position:absolute;
+  left:2px;
+  top:8px;
+  width:99px;
+  word-wrap:break-word;
+}
+#u46_div {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:100px;
+  height:41px;
+  background:inherit;
+  background-color:rgba(39, 63, 82, 1);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-size:20px;
+  color:#FFFFFF;
+}
+#u46 {
+  position:absolute;
+  left:957px;
+  top:5px;
+  width:100px;
+  height:41px;
+  font-size:20px;
+  color:#FFFFFF;
+}
+#u47 {
+  position:absolute;
+  left:2px;
+  top:8px;
+  width:96px;
+  word-wrap:break-word;
 }
 
 .gameInList{
